--- a/popup.html
+++ b/popup.html
@@ -49,6 +49,13 @@
         background-color: lightblue;
         pointer-events: none;
     }
+    .selectButton {
+        padding-top: 5px;
+        position: relative;
+        color: whitesmoke;
+        font-family: 'Gaegu', cursive;
+    }
+
 
     @keyframes moveCircleRight {
         from {
@@ -104,6 +111,9 @@
         <div class="row">Dark</div>
         <div class="row">Off</div>
         <div class="circle"></div>
+    </div>
+    <div class="selectButton">
+        <input class="checkbox" type="checkbox" checked>Apply to all pages
     </div>
    
 </body>
